Fixed button alignment

--- a/styles/components/_home.scss
+++ b/styles/components/_home.scss
@@ -42,6 +42,10 @@ hr {
 .title-col {
   position: relative;
   z-index: 1;
+
+  .button {
+    align-self: center;
+  }
 }
 
 h3 {
